Update logo link and add mobile menu icon

--- a/index.html
+++ b/index.html
@@ -12,16 +12,27 @@
 
 <header>
   <div class="container navbar">
-    <div class="logo">🃏 Joker Ludo</div>
-    <div class="nav-links">
+    
+    <!-- Logo Click = Home -->
+    <div class="logo">
+      <a href="index.html" style="color:#ffd700; text-decoration:none;">
+        🃏 Joker Ludo
+      </a>
+    </div>
+
+    <!-- Mobile Menu Icon -->
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
+    <div class="nav-links" id="navLinks">
       <a href="index.html">Home</a>
       <a href="ludo.html">Ludo Groups</a>
       <a href="Whatsappludogrouplink.html">WhatsApp</a>
       <a href="addgroup.html">List Your Group</a>
-      <a href="contact.html">Contact</a>
     </div>
+
   </div>
 </header>
+
 
 <section class="hero">
   <div class="container">
