Add toggleMenu function for navigation menu

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
   </div>
 </section>
 
+  <script>
+function toggleMenu() {
+  document.getElementById("navLinks").classList.toggle("active");
+}
+</script>
+
+  
 <footer>
   <div class="container">
     <p>© 2026 Joker Ludo – All Rights Reserved</p>
