--- a/index.html
+++ b/index.html
@@ -1,87 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Joker Ludo Group</title>
 <link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
 <header>
   <div class="container navbar">
-    
-    <!-- Logo Click = Home -->
     <div class="logo">
-      <a href="index.html" style="color:#ffd700; text-decoration:none;">
+      <a href="index.html" style="color:#ffd700;text-decoration:none;">
         🃏 Joker Ludo
       </a>
     </div>
-
-    <!-- Mobile Menu Icon -->
-    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-
-    <div class="nav-links" id="navLinks">
-      <a href="index.html">Home</a>
-      <a href="ludo.html">Ludo Groups</a>
-      <a href="Whatsappludogrouplink.html">WhatsApp</a>
-      <a href="addgroup.html">List Your Group</a>
-    </div>
-
   </div>
 </header>
 
-
-<section class="hero">
+<section>
   <div class="container">
-    <h1>India’s Trusted Joker Ludo Groups Platform</h1>
-    <p>Join & List Your Ludo Groups Easily</p>
-    <a href="ludo.html" class="btn">Browse Groups</a>
-    <a href="addgroup.html" class="btn">List Your Group</a>
-  </div>
-</section>
 
-<section class="categories">
-  <div class="container">
-    <h2>Group Categories</h2>
+    <h2 style="text-align:center;margin-bottom:40px;">
+      Select Group Category
+    </h2>
+
     <div class="grid">
 
-      <div class="card">
-        <h3>🎮 Ludo Cash Groups</h3>
-        <p>Daily active Ludo matches</p>
-        <a href="ludo.html" class="btn">View Groups</a>
-      </div>
-
-      <div class="card">
-        <h3>📱 WhatsApp Groups</h3>
-        <p>Verified WhatsApp Ludo groups</p>
-        <a href="Whatsappludogrouplink.html" class="btn">View Groups</a>
-      </div>
-
-      <div class="card">
-        <h3>🏆 Tournament Groups</h3>
-        <p>Big prize Ludo tournaments</p>
-        <a href="earning-ludo-groups.html" class="btn">View Groups</a>
-      </div>
+      <div class="card"><h3>Ludo Groups</h3><a href="ludo.html" class="btn">Open</a></div>
+      <div class="card"><h3>WhatsApp Groups</h3><a href="whatsapp.html" class="btn">Open</a></div>
+      <div class="card"><h3>Telegram Groups</h3><a href="telegram.html" class="btn">Open</a></div>
+      <div class="card"><h3>Earn Money Groups</h3><a href="earning.html" class="btn">Open</a></div>
+      <div class="card"><h3>Online Work Groups</h3><a href="onlinework.html" class="btn">Open</a></div>
+      <div class="card"><h3>Movie Groups</h3><a href="movie.html" class="btn">Open</a></div>
+      <div class="card"><h3>Viral Video Groups</h3><a href="viral.html" class="btn">Open</a></div>
+      <div class="card"><h3>PUBG Groups</h3><a href="pubg.html" class="btn">Open</a></div>
+      <div class="card"><h3>Free Fire Groups</h3><a href="freefire.html" class="btn">Open</a></div>
+      <div class="card"><h3>Facebook Groups</h3><a href="facebook.html" class="btn">Open</a></div>
+      <div class="card"><h3>YouTube Sub4Sub</h3><a href="youtube.html" class="btn">Open</a></div>
+      <div class="card"><h3>Instagram Follow4Follow</h3><a href="instagram.html" class="btn">Open</a></div>
+      <div class="card"><h3>Study Groups</h3><a href="study.html" class="btn">Open</a></div>
+      <div class="card"><h3>Course Groups</h3><a href="course.html" class="btn">Open</a></div>
+      <div class="card"><h3>Hindu Groups</h3><a href="hindu.html" class="btn">Open</a></div>
+      <div class="card"><h3>Girls Groups</h3><a href="girls.html" class="btn">Open</a></div>
 
     </div>
   </div>
 </section>
-
-  <script>
-function toggleMenu() {
-  document.getElementById("navLinks").classList.toggle("active");
-}
-</script>
-
-  
-<footer>
-  <div class="container">
-    <p>© 2026 Joker Ludo – All Rights Reserved</p>
-  </div>
-</footer>
 
 </body>
 </html>
