--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
   <div class="container nav">
     <div class="logo">🎲 Joker Ludo Group</div>
 
-    <nav class="menu">
-      <a href="#">Home</a>
-      <a href="#">Categories</a>
-      <a href="#">Submit Group</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
+   <nav class="menu" id="mobileMenu">
+  <a href="#">Home</a>
+  <a href="#">Categories</a>
+  <a href="#">Submit Group</a>
+  <a href="#">About</a>
+  <a href="#">Contact</a>
+</nav>
+
+<div class="mobile-toggle" id="menuToggle">☰</div>
+
 
     <div class="mobile-toggle">☰</div>
   </div>
