--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
   </div>
 </footer>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
+
 
 </body>
 </html>
