--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
 <section class="section dark">
   <div class="container">
 
-    <h2 class="section-title">Latest Groups</h2>
+  <section class="latest-section">
+    <h2>Latest Ludo Groups</h2>
+
+    <div class="grid-3" id="latestGroups"></div>
+
+</section>
+
 
     <div class="grid-3">
 
