--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
   <div class="container nav">
     <div class="logo">🎲 Joker Ludo Group</div>
 
-    <nav class="menu" id="mobileMenu">
-      <a href="index.html">Home</a>
-      <a href="ludo.html">Categories</a>
-      <a href="addgroup.html">Submit Group</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+<nav class="menu" id="mobileMenu">
+  <a href="index.html">Home</a>
+  <a href="ludo.html">Categories</a>
+  <a href="addgroup.html">Submit Group</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<div class="mobile-toggle" id="menuToggle">☰</div>
+
 
     <div class="mobile-toggle" id="menuToggle">☰</div>
   </div>
